--- a/gb/20/7/20/n12269943.md
+++ b/gb/20/7/20/n12269943.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tlrwgy3357/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tlrwgy3357/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tlrwgy3357/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tlrwgy3357/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tlrwgy3357/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tlrwgy3357/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tlrwgy3357/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tlrwgy3357/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tlrwgy3357/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tlrwgy3357/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tlrwgy3357/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tlrwgy3357/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tlrwgy3357/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tlrwgy3357/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>假渔民勒索离岸风电工程包商 台竹联帮堂口16嫌落网</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年07月20日讯】（大纪元记者袁世钢台湾台北报导）政府绿能政策之一的<ahref="https://github.com/tlrwgy3357/djy/blob/master/gb/tag/%E7%A6%BB%E5%B2%B8%E9%A3%8E%E7%94%B5.md#1">离岸风电</a>工程竟遭黑道帮派<ahref="https://github.com/tlrwgy3357/djy/blob/master/gb/tag/%E6%81%90%E5%90%93.md#1">恐吓</a>勒索！<ahref="https://github.com/tlrwgy3357/djy/blob/master/gb/tag/%E8%8B%97%E6%A0%97.md#1">苗栗</a>县竹南警分局指出，自称是<ahref="https://github.com/tlrwgy3357/djy/blob/master/gb/tag/%E7%AB%B9%E8%81%94%E5%B8%AE.md#1">竹联帮</a>顺堂、东堂成员的何男、王男于去(108)年底锁定竹南镇离岸风电工程包商，假冒渔民谎称生计受影响，趁机勒索赔偿金数百万元；警方上月逮捕16人到案，全案依恐吓等罪移送苗检侦办。</p>
-<p>竹南警分局侦查队长詹国政20日表示，何、王2人长期以<ahref="https://github.com/tlrwgy3357/djy/blob/master/gb/tag/%E7%AB%B9%E8%81%94%E5%B8%AE.md#1">竹联帮</a>顺堂、东堂身份横行于新竹、竹南一带，以从事<ahref="https://github.com/tlrwgy3357/djy/blob/master/gb/tag/%E6%9A%B4%E5%8A%9B%E8%AE%A8%E5%80%BA.md#1">暴力讨债</a>、<ahref="https://github.com/tlrwgy3357/djy/blob/master/gb/tag/%E6%81%90%E5%90%93.md#1">恐吓</a>承包公共工程的外商公司等不法行为；并相中了规模庞大的离岸风力发电工程，遂于去(108)年底假冒渔民身份，率8名小弟至工地谎称渔获受工程影响而造成损失，并向工程包商求偿数百万元，否则将号召渔民围事。</p>
-<p>警方获报后不敢大意，由<ahref="https://github.com/tlrwgy3357/djy/blob/master/gb/tag/%E8%8B%97%E6%A0%97.md#1">苗栗</a>县刑事警察大队、刑事警察局第六大队、嘉义市警察局刑事警察大队共组专案小组，报请苗栗地检署检察官指挥侦办。检警于6月中旬接续发动2波检肃行动，前往何嫌等人住处搜索，逮捕16人到案，并查扣模拟枪3把、空气枪1把、本票、借据、刀械棍棒、及署名“竹顺企业”的帮派名牌。</p>
+<p>【大纪元2020年07月20日讯】（大纪元记者袁世钢台湾台北报导）政府绿能政策之一的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A6%BB%E5%B2%B8%E9%A3%8E%E7%94%B5.md#1">离岸风电</a>工程竟遭黑道帮派<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%81%90%E5%90%93.md#1">恐吓</a>勒索！<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8B%97%E6%A0%97.md#1">苗栗</a>县竹南警分局指出，自称是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%AB%B9%E8%81%94%E5%B8%AE.md#1">竹联帮</a>顺堂、东堂成员的何男、王男于去(108)年底锁定竹南镇<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A6%BB%E5%B2%B8%E9%A3%8E%E7%94%B5.md#1">离岸风电</a>工程包商，假冒渔民谎称生计受影响，趁机勒索赔偿金数百万元；警方上月逮捕16人到案，全案依恐吓等罪移送苗检侦办。</p>
+<p>竹南警分局侦查队长詹国政20日表示，何、王2人长期以<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%AB%B9%E8%81%94%E5%B8%AE.md#1">竹联帮</a>顺堂、东堂身份横行于新竹、竹南一带，以从事<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9A%B4%E5%8A%9B%E8%AE%A8%E5%80%BA.md#1">暴力讨债</a>、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%81%90%E5%90%93.md#1">恐吓</a>承包公共工程的外商公司等不法行为；并相中了规模庞大的离岸风力发电工程，遂于去(108)年底假冒渔民身份，率8名小弟至工地谎称渔获受工程影响而造成损失，并向工程包商求偿数百万元，否则将号召渔民围事。</p>
+<p>警方获报后不敢大意，由<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8B%97%E6%A0%97.md#1">苗栗</a>县刑事警察大队、刑事警察局第六大队、嘉义市警察局刑事警察大队共组专案小组，报请苗栗地检署检察官指挥侦办。检警于6月中旬接续发动2波检肃行动，前往何嫌等人住处搜索，逮捕16人到案，并查扣模拟枪3把、空气枪1把、本票、借据、刀械棍棒、及署名“竹顺企业”的帮派名牌。</p>
 <p>此外，警方也查出，何嫌等人也曾受人委托，向一名越南籍债务人以暴力手段追讨逾千万元会钱，得手近60万元后竟黑吃黑全数侵吞；甚至，何嫌也向某地方仕绅谎称其子欠债，率众强押老翁签下本票，行径嚣张。</p>
 <p>警方讯后依涉犯恐吓、重利及伤害、违反《组织犯罪防制条例》等罪嫌移送苗栗地检署侦办。检方复讯后将何、王2人向法院声请羁押获准，并谕知其余共犯分别以1万2千元至2万元不等金额交保或限制住居。</p>
 <p>由于风力发电是国家重要政策，苗栗县长徐耀昌、苗栗县议会议长钟东锦也亲自前往竹南警分局颁发破案奖金。</p>
@@ -17,42 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/19/10/1/n11559734.md#1">中坜警方扫荡竹联帮暴力讨债集团</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/3/26/n11977253.md#1">竹联帮勾结环保蟑螂 警破组织逮18人</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/20/n12269945.md#1">乌龙军购？台国防部：空军未依程序办理爱三飞弹延寿</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/20/n12269948.md#1">美众议员拟提案中共动武美军可派兵护台</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/20/n12269950.md#1">首位女性驻美大使 萧美琴自诩“战猫灵活外交”</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/20/n12269790.md#1">花旗估：四大理由推升金价 或突破2000美元</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/20/n12269829.md#1">动滋网开放首日遭民众瘫痪 台体育署：非先抢先赢</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/20/n12269442.md#1">张雅琴批三倍券是失败政策 台行政院回应了</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/20/n12269274.md#1">台美国会联谊会成立 AIT处长郦英杰：展现台人对美国满满善意</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/19/n12267300.md#1">媒体批无资安观念 台国防部：错误讯息</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/10/1/n11559734.md#1">中坜警方扫荡竹联帮暴力讨债集团</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/26/n11977253.md#1">竹联帮勾结环保蟑螂 警破组织逮18人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616470.md#1">台海情势受关注 蔡英文：民主是唯一选项</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616369.md#1">台湾边境渐松绑 旅游业者已接包团订单</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616367.md#1">庇护乌克兰难民 徐国勇：以不推回原则处理</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616284.md#1">狱中指挥议员女儿诈助理费 高雄前议员重判10年5月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616286.md#1">越南女移工成整形密医 私设医美诊所1年赚300万</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616290.md#1">首梯新制教召5日登场 每日施训10小时两周无休</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616184.md#1">会拜登特使团 赖清德盼台湾能加入Quad</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616189.md#1">台美教育高层对话 美亚太助卿与国安会与谈</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/26/n10742140.md#1" target="_blank">韩丽明：麻雀的哀歌</a></li><li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488493.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（2）</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/9/n10040271.md#1" target="_blank">共产暴政录：“胡风反革命集团”案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/5/n11367520.md#1" target="_blank">响彻在世界政坛的正义之声（中）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/18/n12265847.md#1">长江2号洪水来袭 官媒承认三峡大坝位移变形</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/18/n12265081.md#1">【拍案惊奇】三峡水量暴增 中科院百人出走</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/19/n12266721.md#1">【翻墙必看】官媒终于承认三峡大坝变形</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/17/n12264288.md#1">红二代：赚钱的行业都垄断 老百姓有选择吗</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/18/n12266091.md#1">【新闻看点】大洪水北京甩锅？伊朗2500万染疫</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/17/n12264458.md#1">病情恶化放弃治疗 冯小刚排队买煎饼果子</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/17/n12263825.md#1">张玉嬿突现身 谢祖武见昔日旧爱吓到紧张起身</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/18/n12266356.md#1">女歌手染疫牵连TVB百人 病毒攻入港娱乐圈</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/17/n12264690.md#1">庆节目千集抛震撼弹 胡瓜：一二年内规划退休</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/18/n12265364.md#1">三浦春马年仅30岁家中身亡 多部新作公开在即</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/16/n12259901.md#1">巴西男子在树干中发现耶稣像 网民：神迹</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/6/5/n12163902.md#1">【命理】影响婚姻的女命八字</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/17/n12264106.md#1">【馨香雅句】为何他们守护正体字</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/9/4/4/n2484948.md#1">从《清明上河图》看时代风华（上）</a></li>
-<li><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/20/6/4/n12161581.md#1">【康熙大帝】恤农惠商 开创承平盛世</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tlrwgy3357/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tlrwgy3357/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/20/n12269943.htm">假渔民勒索离岸风电工程包商 台竹联帮堂口16嫌落网</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/20/n12269943.htm">假渔民勒索离岸风电工程包商 台竹联帮堂口16嫌落网</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tlrwgy3357/djy/blob/master/gb/20/7/20/n12269943.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tlrwgy3357/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tlrwgy3357/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tlrwgy3357/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tlrwgy3357/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/7/20/n12269943.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
